# berlin-aerospace-hackathon

./: .gitignore  README.md  challenge3.ipynb  germany.json  pyproject.toml
challenge_1/: README.md  Supersonic_Boomless_Flight_Corridor_Mapper_Challenge.ipynb
challenge_2/: Earth_Observation_Challenge.ipynb  README.md  challenge2.md  events.md
challenge_3/: Mini_Constellation_Tasking_Planner_Challenge.ipynb  README.md  austria.json
