[project]
name = "berlin-aerospace-hackathon"
version = "0.1.0"
description = "Challenges for the Berlin Aerospace Hackathon"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tilebox>=0.1.0",
    "xarray>=2024.7.0",
    "matplotlib>=3.9.2",
    "ipywidgets>=8.1.5",
    "sgp4>=2.25",
    "openmeteo-requests>=1.7.4",
    "requests-cache>=1.2.1",
    "retry-requests>=2.0.0",
    "numpy>=2.3.0",
]
authors = [{ name = "Tilebox, Inc.", email = "support@tilebox.com" }]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = ["jupyter>=1.0.0", "pyright>=1.1.389", "ruff>=0.8.1"]

[tool.ruff]
# settings applying to all ruff subcommands, such as `ruff check` (lint) and `ruff format`
line-length = 120
target-version = "py310"
exclude = ["*/.venv/*", "**/*.ipynb"]

[tool.ruff.lint]
select = ["ALL"]
# all rules: https://beta.ruff.rs/docs/rules
ignore = [
    # some ruff checking modules don't make much sense as a whole
    "D",   # pydocstyle: pretty strict anyways
    "FBT", # flake8-boolean-trap: boolean arguments can make sense
    "COM", # flake8-commas: formatter takes care of this
    "DTZ", # flake8-datetimez: utc datetimes are useful
    "DJ",  # flake8-django: not needed
    "EM",  # flake8-errmsg: str directly in Exception constructor is accetable
    "TCH", # flake8-type-checking: type checking blocks are weird
    # specific rules
    "ANN401",  # any-type: allow Any in *args and **kwargs
    "S101",    # assert: allow usage of assert
    "B008",    # function-call-argument-default: some default argument values make sense to be function calls
    "G004",    # logging-f-string: allow usage of f-strings in logging calls
    "PLR2004", # magic-value-comparison: sometimes comparison with constants (e.g. 0) makes sense
    "TRY003",  # raise-vanilla-args: exceptions like this make sense in python
    "TRY400",  # error-instead-of-exception: logger.error is ok with loguru
    "INP001",  # implicit-namespace-package: this repo is not an installable python package
    # disabled because of formatter
    "E501",   # line-too-long -> formatter takes care of this
    "ISC001", # single-line-implicit-str-concatenation -> formatter takes care of this
    "Q",      # flake8-quotes -> formatter takes care of this
    "W191",   # tab-indentation -> formatter takes care of this
]

unfixable = [
    "F841", # unused-variable -> don't remove them automatically
    "ERA",  # eradicate -> (commented out code), don't remove it automatically
]

[tool.pyright]
exclude = ["**/.ipynb_checkpoints", "**/__pycache__", ".venv", "**/*.ipynb"]

# pyright needs to have all the dependencies installed to be able to type check
# we can make sure of this by telling it to use the uv venv
venvPath = "."
venv = ".venv"
